crates/toml_edit/tests/snapshots/invalid/control/rawmulti-cr.stderr
TOML parse error at line 1, column 25
  |
1 | rawmulti-cr   = '''null
'''
  |                         ^
carriage return must be followed by newline, expected newline
